--- a/Blogs/cleaning-methods-and-services/index.html
+++ b/Blogs/cleaning-methods-and-services/index.html
@@ -10,12 +10,12 @@
     <meta name="description" content="دليل شامل لأساليب وخدمات التنظيف من شركة لمعة للنظافة - أفضل شركة تنظيف في الرياض. اكتشف الحلول المتكاملة والأساليب الحديثة للحصول على بيئة نظيفة وصحية.">
     <meta name="keywords" content="شركة تنظيف، الرياض، تنظيف منازل، شركة نظافة، خدمات تنظيف، تنظيف بالبخار، عمالة تنظيف، شركة لمعة">
     <meta name="author" content="شركة لمعة للنظافة">
-    <link rel="canonical" href="https://gooldenmoon.com/cleaning-methods-and-services/index.html">
+    <link rel="canonical" href="https://gooldenmoon.com/blogs/cleaning-methods-and-services/">
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="دليل شامل لأساليب وخدمات التنظيف - شركة لمعة للنظافة">
     <meta property="og:description" content="دليل كامل يقدم حلولاً متكاملة للتنظيف من أفضل شركة نظافة في الرياض">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://gooldenmoon.com/cleaning-methods-and-services/index.html">
+    <meta property="og:url" content="https://gooldenmoon.com/blogs/cleaning-methods-and-services/">
     
 
     <!-- Twitter Meta Tags -->
