--- a/Blogs/cleaning-services/index.html
+++ b/Blogs/cleaning-services/index.html
@@ -11,16 +11,16 @@
     <meta name="description" content="اكتشف أفضل خدمات التنظيف في الرياض مع دليل شامل للنظافة المهنية، يشمل تنظيف المنازل، المكاتب، والمباني بطرق آمنة وصديقة للبيئة في المملكة العربية السعودية.">
     <meta name="keywords" content="خدمات التنظيف في الرياض, شركات تنظيف بالرياض, تنظيف المنازل, التنظيف الاحترافي, النظافة المهنية, دليل التنظيف, المملكة العربية السعودية, تنظيف المكاتب, خدمات النظافة, بيئة نظيفة">
     <meta name="author" content="دليل خدمات التنظيف في السعودية">
-    <meta property="og:url" content="https://gooldenmoon.com/cleaning-services/index.html">
+    <meta property="og:url" content="https://gooldenmoon.com/blogs/cleaning-services/">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://gooldenmoon.com/cleaning-services/index.html">
+    <link rel="canonical" href="https://gooldenmoon.com/blogs/cleaning-services/">
     
     <!-- Open Graph لوسائل التواصل -->
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ar_AR">
     <meta property="og:title" content="خدمات التنظيف في الرياض - دليلك الشامل للنظافة المهنية في المملكة العربية السعودية">
     <meta property="og:description" content="تعرف على أفضل خدمات التنظيف في الرياض مع دليل مفصل حول النظافة الاحترافية للمنازل والشركات بأساليب حديثة وصديقة للبيئة.">
-    <meta property="og:url" content="https://gooldenmoon.com/cleaning-services/index.html">
+    <meta property="og:url" content="https://gooldenmoon.com/blogs/cleaning-services/">
     <meta property="og:site_name" content="دليل التنظيف بالرياض">
 
     <!-- Twitter Card -->
