--- a/Blogs/cleanliness-in-the-Gulf/index.html
+++ b/Blogs/cleanliness-in-the-Gulf/index.html
@@ -10,15 +10,15 @@
     <meta name="keywords" content="خدمات النظافة في الخليج, شركات تنظيف الخليج, تنظيف المنازل الخليج, شركة فريش كلين, خدمات تنظيف متقدمة, تنظيف المكاتب الخليج" />
     <meta name="author" content="شركة فريش كلين" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://gooldenmoon.com/cleanliness-in-the-Gulf/index.html">
+    <link rel="canonical" href="https://gooldenmoon.com/blogs/cleanliness-in-the-Gulf/">
     
 
     <!-- Open Graph (للفيسبوك وLinkedIn) -->
     <meta property="og:title" content="النظافة في الخليج العربي: دليل شامل مع خدمات فريش كلين" />
     <meta property="og:description" content="تعرف على أفضل شركات تنظيف المنازل والمكاتب في الخليج العربي مع شركة فريش كلين، خدمات تنظيف متخصصة لجميع احتياجاتك." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://gooldenmoon.com/cleanliness-in-the-Gulf/index.html" />
-    <link rel="canonical" href="https://gooldenmoon.com/cleanliness-in-the-Gulf/index.html">
+    <meta property="og:url" content="https://gooldenmoon.com/blogs/cleanliness-in-the-Gulf/" />
+   
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
