--- a/Blogs/comprehensive-transportation-solutions/index.html
+++ b/Blogs/comprehensive-transportation-solutions/index.html
@@ -10,13 +10,13 @@
     <meta name="keywords" content="نقل عفش الكويت, شركات نقل عفش الكويت, نقل الأثاث بالكويت, خدمات نقل العفش, نقل عفش الكويت العاصمة, نقل أثاث الأحمدي, نقل عفش حولي, نقل أثاث الفروانية" />
     <meta name="author" content="شركة نقل عفش الكويت" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://gooldenmoon.com/comprehensive-transportation-solutions/index.html">
+    <link rel="canonical" href="https://gooldenmoon.com/blogs/comprehensive-transportation-solutions/">
 
     <!-- Open Graph -->
     <meta property="og:title" content="الحلول الشاملة لعملية نقل العفش بالكويت ومدن الكويت" />
     <meta property="og:description" content="اكتشف جميع خدمات ونصائح نقل العفش بالكويت، مع أفضل الشركات المتخصصة لضمان عملية نقل سلسة وآمنة." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://gooldenmoon.com/comprehensive-transportation-solutions/index.html" />
+    <meta property="og:url" content="https://gooldenmoon.com/blogs/comprehensive-transportation-solutions/" />
    
 
     <!-- Twitter Card -->
