--- a/Blogs/fire-fighting/index.html
+++ b/Blogs/fire-fighting/index.html
@@ -17,8 +17,8 @@
     <meta property="og:title" content="أهمية مكافحة الحرائق: دليل شامل للسلامة والوقاية">
     <meta property="og:description" content="دليل شامل عن أهمية مكافحة الحرائق وكيفية الوقاية منها بطرق فعالة لضمان السلامة في جميع الأماكن.">
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://gooldenmoon.com/fire-fighting/index.html"> 
-    <link rel="canonical" href="https://gooldenmoon.com/fire-fighting/index.html">
+    <meta property="og:url" content="https://gooldenmoon.com/blogs/fire-fighting/"> 
+    <link rel="canonical" href="https://gooldenmoon.com/blogs/fire-fighting/">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
