--- a/Blogs/furniture-arrangement/index.html
+++ b/Blogs/furniture-arrangement/index.html
@@ -15,14 +15,14 @@
     <meta name="robots" content="index, follow">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://gooldenmoon.com/furniture-arrangement/index.html">
+    <link rel="canonical" href="https://gooldenmoon.com/blogs/furniture-arrangement/">
 
     <!-- Open Graph -->
     <meta property="og:type" content="article">
     <meta property="og:locale" content="ar_AR">
     <meta property="og:title" content="دليل شامل: أفضل طرق ترتيب الأثاث في المنزل الجديد - التأثير البيئي والتنمية المستدامة">
     <meta property="og:description" content="تعرف على أحدث طرق ترتيب الأثاث بطريقة عملية ومستدامة مع الحفاظ على البيئة وتعزيز الراحة في المنزل الجديد.">
-    <meta property="og:url" content="https://gooldenmoon.com/furniture-arrangement/index.html">
+    <meta property="og:url" content="https://gooldenmoon.com/blogs/furniture-arrangement/">
     <meta property="og:site_name" content="Meuvex Furniture">
     
     <!-- Twitter Card -->
