--- a/Blogs/furniture-moving-companies/index.html
+++ b/Blogs/furniture-moving-companies/index.html
@@ -9,13 +9,13 @@
     <meta name="description" content="تعرف على دليل شامل لاختيار شركة نقل أثاث موثوقة في الكويت، مع قائمة بأفضل شركات النقل المضمونة التي تضمن لك سرعة وأمان وكفاءة في عملية النقل." />
     <meta name="keywords" content="نقل أثاث الكويت, شركات نقل الأثاث في الكويت, شركات نقل موثوقة, نقل عفش الكويت, دليل نقل الأثاث, شركات نقل أثاث مضمونة" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://gooldenmoon.com/furniture-moving-companies/index.html">
+    <link rel="canonical" href="https://gooldenmoon.com/blogs/furniture-moving-companies/">
 
     <!-- Meta Open Graph (لفيسبوك ووسائل التواصل) -->
     <meta property="og:title" content="دليل شامل لاختيار شركة نقل أثاث موثوقة في الكويت - أفضل شركات النقل المضمونة" />
     <meta property="og:description" content="دليلك المتكامل لاختيار أفضل شركة نقل أثاث في الكويت مع نصائح ذهبية وقائمة بأفضل الشركات المضمونة." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://gooldenmoon.com/furniture-moving-companies/index.html" />
+    <meta property="og:url" content="https://gooldenmoon.com/blogs/furniture-moving-companies/" />
     
 
     <!-- Meta Twitter Cards -->
