--- a/Blogs/furniture-moving-in-the-Gulf/index.html
+++ b/Blogs/furniture-moving-in-the-Gulf/index.html
@@ -9,13 +9,13 @@
     <meta name="keywords" content="نقل العفش في الخليج, خدمات نقل الأثاث, Exo Move, شركات نقل العفش, نقل أثاث الخليج, خدمات النقل المتميزة" />
     <meta name="author" content="Exo Move" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://gooldenmoon.com/furniture-moving-in-the-Gulf/index.html">
+    <link rel="canonical" href="https://gooldenmoon.com/blogs/furniture-moving-in-the-Gulf/">
 
     <!-- Meta Open Graph (لفيسبوك ووسائل التواصل) -->
     <meta property="og:title" content="دليل شامل لنقل العفش في الخليج - خدمات Exo Move المتميزة" />
     <meta property="og:description" content="اكتشف خدمات Exo Move المتميزة في نقل العفش داخل الخليج مع نصائح ودليل شامل لضمان تجربة نقل سهلة وآمنة." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://gooldenmoon.com/furniture-moving-in-the-Gulf/index.html" />
+    <meta property="og:url" content="https://gooldenmoon.com/blogs/furniture-moving-in-the-Gulf/" />
     
 
     <!-- Meta Twitter Cards -->
