--- a/Blogs/air-conditioner-maintenance/index.html
+++ b/Blogs/air-conditioner-maintenance/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="آيرون كول - خدمات التكييف والتبريد" />
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <link rel="canonical" href="https://gooldenmoon.com/air-conditioner-maintenance/index.html">
+    <link rel="canonical" href="https://gooldenmoon.com/blogs/air-conditioner-maintenance/">
     
     <!-- Geographic and Location SEO -->
     <meta name="geo.region" content="SA" />
@@ -24,7 +24,7 @@
     <meta property="og:title" content="دليل شامل لصيانة وتعديل المكيفات في السعودية 2024 - آيرون كول" />
     <meta property="og:description" content="الدليل الكامل لصيانة وتعديل المكيفات في المملكة العربية السعودية. نصائح احترافية، أسعار تنافسية، وخدمات متخصصة لجميع أنواع المكيفات." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://gooldenmoon.com/air-conditioner-maintenance/index.html" />
+    <meta property="og:url" content="https://gooldenmoon.com/blogs/air-conditioner-maintenance/" />
     <meta property="og:site_name" content="آيرون كول - خدمات التكييف والتبريد" />
     <meta property="og:locale" content="ar_SA" />
     <meta property="article:author" content="آيرون كول" />
@@ -38,8 +38,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="دليل شامل لصيانة وتعديل المكيفات في السعودية 2024 - آيرون كول" />
     <meta name="twitter:description" content="الدليل الكامل لصيانة وتعديل المكيفات في المملكة العربية السعودية. نصائح احترافية وخدمات متخصصة." />
-    <meta name="twitter:site" content="@ironcool_sa" />
-    <meta name="twitter:creator" content="@ironcool_sa" />
+   
     
     <!-- Additional SEO Meta Tags -->
     <meta name="theme-color" content="#590d3d" />
