--- a/Blogs/furniture-in-the-gulf/index.html
+++ b/Blogs/furniture-in-the-gulf/index.html
@@ -9,13 +9,13 @@
     <meta name="description" content="اكتشف دليل شامل لخدمات نقل الأثاث في منطقة الخليج، وأهمية اختيار الشركات المتخصصة لتحقيق الأمان والسرعة والجودة في عمليات النقل." />
     <meta name="keywords" content="نقل الأثاث, شركات نقل الأثاث, نقل أثاث الخليج, نقل عفش, خدمات النقل, شركات متخصصة في الخليج, دليل نقل الأثاث" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://gooldenmoon.com/furniture-in-the-gulf/index.html">
+    <link rel="canonical" href="https://gooldenmoon.com/blogs/furniture-in-the-gulf/">
 
     <!-- Meta Open Graph  -->
     <meta property="og:title" content="نقل الأثاث في منطقة الخليج: دليل شامل وأهمية الشركات المتخصصة" />
     <meta property="og:description" content="دليل شامل عن خدمات نقل الأثاث في الخليج وأهمية الاعتماد على الشركات المتخصصة لتحقيق نقل آمن وسريع بدون عناء." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://gooldenmoon.com/furniture-in-the-gulf" />
+    <meta property="og:url" content="https://gooldenmoon.com/blogs/furniture-in-the-gulf" />
     
 
     <!-- Meta Twitter Cards -->
