--- a/Blogs/air-conditioner-maintenance/index.html
+++ b/Blogs/air-conditioner-maintenance/index.html
@@ -1291,6 +1291,6 @@
             observer.observe(section);
         });
     </script>
-    <script src="../assets/js/main.js"></script>
+    <script src="../../assets/js/main.js"></script>
 </body>
 </html>
