--- a/Blogs/comprehensive-transportation-solutions/index.html
+++ b/Blogs/comprehensive-transportation-solutions/index.html
@@ -171,16 +171,16 @@
                     <h3><i class="fas fa-list"></i> فهرس المحتويات</h3>
                     <ul class="toc-list">
                         <li><a href="#introduction"><i class="fas fa-home"></i>المقدمة</a></li>
-                        <li><a href="https://www.bashir-mover.com/"><i class="fas fa-star"></i>شركة Bashir Mover</a></li>
-                        <li><a href="https://www.bashir-mover.com/"><i class="fas fa-cogs"></i>خدمات شركات نقل العفش</a></li>
-                        <li><a href="https://www.bashir-mover.com/"><i class="fas fa-couch"></i>أنواع الأثاث</a></li>
-                        <li><a href="https://www.bashir-mover.com/"><i class="fas fa-map-marker-alt"></i>محافظات الكويت</a></li>
-                        <li><a href="https://www.bashir-mover.com/"><i class="fas fa-calculator"></i>العوامل المؤثرة على التكلفة</a></li>
-                        <li><a href="https://www.bashir-mover.com/"><i class="fas fa-search"></i>اختيار الشركة المناسبة</a></li>
+                        <li><a href="#bashir-company"><i class="fas fa-star"></i>شركة Bashir Mover</a></li>
+                        <li><a href="#services"><i class="fas fa-cogs"></i>خدمات شركات نقل العفش</a></li>
+                        <li><a href="#furniture-types"><i class="fas fa-couch"></i>أنواع الأثاث</a></li>
+                        <li><a href="#governorates"><i class="fas fa-map-marker-alt"></i>محافظات الكويت</a></li>
+                        <li><a href="#cost-factors"><i class="fas fa-calculator"></i>العوامل المؤثرة على التكلفة</a></li>
+                        <li><a href="#choosing-company"><i class="fas fa-search"></i>اختيار الشركة المناسبة</a></li>
                         <li><a href="#competitors"><i class="fas fa-building"></i>الشركات المنافسة</a></li>
                         <li><a href="#benefits"><i class="fas fa-star"></i>فوائد الاستعانة بالمحترفين</a></li>
                         <li><a href="#planning"><i class="fas fa-calendar-alt"></i>التخطيط والإعداد</a></li>
-                        <li><a href="https://www.bashir-mover.com/"><i class="fas fa-exclamation-triangle"></i>المفاهيم الخاطئة</a></li>
+                        <li><a href="#misconceptions"><i class="fas fa-exclamation-triangle"></i>المفاهيم الخاطئة</a></li>
                         <li><a href="#moving-day"><i class="fas fa-clock"></i>نصائح ليوم النقل</a></li>
                         <li><a href="#faq"><i class="fas fa-question-circle"></i>الأسئلة الشائعة</a></li>
                         <li><a href="#conclusion"><i class="fas fa-flag-checkered"></i>الخاتمة</a></li>
