--- a/Blogs/furniture-in-the-gulf/index.html
+++ b/Blogs/furniture-in-the-gulf/index.html
@@ -6,8 +6,8 @@
     <title>نقل الأثاث في منطقة الخليج: دليل شامل وأهمية الشركات المتخصصة</title>
     <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
     <!-- Meta SEO الأساسية -->
-    <meta name="description" content="اكتشف دليل شامل لخدمات نقل الأثاث في منطقة الخليج، وأهمية اختيار الشركات المتخصصة لتحقيق الأمان والسرعة والجودة في عمليات النقل." />
-    <meta name="keywords" content="نقل الأثاث, شركات نقل الأثاث, نقل أثاث الخليج, نقل عفش, خدمات النقل, شركات متخصصة في الخليج, دليل نقل الأثاث" />
+    <meta name="description" content="دليلك الشامل لخدمات نقل الأثاث الاحترافية في منطقة الخليج. اكتشف كيف تضمن الشركات المتخصصة نقل أثاثك بأمان، سرعة، وجودة لا مثيل لها. احصل على نصائح قيمة لعملية نقل خالية من المتاعب!" />
+    <meta name="keywords" content="نقل الأثاث, شركات نقل الأثاث, نقل أثاث الخليج, نقل عفش, خدمات النقل, شركات متخصصة في الخليج, دليل نقل الأثاث, أفضل شركات نقل الأثاث في الخليج, نقل أثاث وعفش في الرياض, خدمات نقل الأثاث الاحترافية, تكلفة نقل الأثاث في الخليج, نصائح لنقل الأثاث بأمان, شركات شحن الأثاث الدولي الخليج, تغليف الأثاث للنقل, فك وتركيب الأثاث" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://gooldenmoon.com/blogs/furniture-in-the-gulf/">
 
@@ -153,10 +153,10 @@
                 </div>
                 <div class="prose prose-lg max-w-none text-gray-700 leading-relaxed">
                     <p class="text-lg mb-6">
-                        تعد عملية نقل الأثاث من المهام التي تتطلب تخطيطًا دقيقًا وجهدًا كبيرًا، سواء كان ذلك على المستوى الشخصي للأفراد أو على مستوى الشركات والمؤسسات. في منطقة الخليج العربي، حيث تتسم الحياة بالحركة والتنقل المستمر بين المدن والدول، تزداد أهمية الحاجة إلى شركات نقل أثاث متخصصة وموثوقة.
+                        تعد عملية نقل الأثاث من المهام التي تتطلب تخطيطًا دقيقًا وجهدًا كبيرًا، سواء كان ذلك على المستوى الشخصي للأفراد أو على مستوى الشركات والمؤسسات. في منطقة الخليج العربي، حيث تتسم الحياة بالحركة والتنقل المستمر بين المدن والدول، تزداد أهمية الحاجة إلى أفضل شركات نقل الأثاث المتخصصة والموثوقة.
                     </p>
                     <p class="mb-6">
-                        هذه المنطقة، التي تشهد نموًا اقتصاديًا وسكانيًا متسارعًا، تستقطب أعدادًا كبيرة من الوافدين والمقيمين الذين يتنقلون باستمرار، مما يجعل خدمات نقل العفش جزءًا لا يتجزأ من البنية التحتية للخدمات الأساسية.
+                        هذه المنطقة، التي تشهد نموًا اقتصاديًا وسكانيًا متسارعًا، تستقطب أعدادًا كبيرة من الوافدين والمقيمين الذين يتنقلون باستمرار، مما يجعل خدمات نقل العفش جزءًا لا يتجزأ من البنية التحتية للخدمات الأساسية. سيقدم هذا الدليل نصائح لنقل الأثاث بأمان ويبرز أهمية خدمات نقل الأثاث الاحترافية.
                     </p>
                     <div class="bg-gray-50 p-6 rounded-lg border-r-4 border-secondary">
                         <h3 class="text-xl font-semibold text-primary mb-3">ما سنغطيه في هذا الدليل:</h3>
@@ -234,9 +234,9 @@
                     
                     <div class="space-y-6">
                         <div class="border-r-4 border-secondary bg-gray-50 p-6 rounded-lg">
-                            <h4 class="text-xl font-semibold text-primary mb-3">طبيعة الأثاث والممتلكات</h4>
+                            <h4 class="text-xl font-semibold text-primary mb-3">طبيعة الأثاث والممتلكات وحاجتها لتغليف الأثاث للنقل</h4>
                             <p>
-                                يمتلك سكان الخليج، سواء المواطنون أو الوافدون، أثاثًا وممتلكات ذات قيمة عالية، تتراوح بين الأثاث المنزلي الفاخر، الأجهزة الإلكترونية الحساسة، التحف الفنية، والمقتنيات الشخصية. هذه الممتلكات تتطلب عناية فائقة أثناء النقل لضمان عدم تعرضها للتلف أو الخدش.
+                                يمتلك سكان الخليج، سواء المواطنون أو الوافدون، أثاثًا وممتلكات ذات قيمة عالية، تتراوح بين الأثاث المنزلي الفاخر، الأجهزة الإلكترونية الحساسة، التحف الفنية، والمقتنيات الشخصية. هذه الممتلكات تتطلب عناية فائقة أثناء النقل لضمان عدم تعرضها للتلف أو الخدش، مما يؤكد على أهمية تغليف الأثاث للنقل بشكل احترافي.
                             </p>
                         </div>
 
@@ -289,9 +289,9 @@
                                 <path d="M3 4a1 1 0 011-1h12a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V4zM3 10a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H4a1 1 0 01-1-1v-6zM14 9a1 1 0 00-1 1v6a1 1 0 001 1h2a1 1 0 001-1v-6a1 1 0 00-1-1h-2z"/>
                             </svg>
                         </div>
-                        <h3 class="text-lg font-semibold text-orange-800 mb-2">التعبئة غير الاحترافية</h3>
+                        <h3 class="text-lg font-semibold text-orange-800 mb-2">التعبئة غير الاحترافية وأهمية خدمات نقل الأثاث الاحترافية</h3>
                         <p class="text-orange-700 text-sm">
-                            التغليف غير الصحيح باستخدام مواد رديئة يعرض الأثاث للخطر والتلف.
+                            التغليف غير الصحيح باستخدام مواد رديئة يعرض الأثاث للخطر والتلف، مما يبرز أهمية الاعتماد على خدمات نقل الأثاث الاحترافية.
                         </p>
                     </div>
 
@@ -380,7 +380,7 @@
                                 <path d="M3 4a1 1 0 011-1h12a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V4zM3 10a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H4a1 1 0 01-1-1v-6zM14 9a1 1 0 00-1 1v6a1 1 0 001 1h2a1 1 0 001-1v-6a1 1 0 00-1-1h-2z"/>
                             </svg>
                         </div>
-                        <h3 class="text-lg font-semibold mb-2">فك وتركيب الأثاث</h3>
+                        <h3 class="text-lg font-semibold mb-2">فك وتركيب الأثاث بواسطة فنيين متخصصين</h3>
                         <p class="text-sm text-primary-dark">خدمة متخصصة بأدوات حديثة</p>
                     </div>
 
@@ -591,7 +591,7 @@
                     <div class="flex items-center justify-between flex-wrap gap-4">
                         <div>
                             <h3 class="text-2xl font-bold mb-2 text-secondary">شركة بريمو موفرز</h3>
-                            <p class="text-lg text-black">الرائدة في نقل الأثاث والعفش في الرياض</p>
+                            <p class="text-lg text-black">الرائدة ومن أفضل شركات نقل الأثاث والعفش في الرياض</p>
                             <div class="flex items-center mt-4 space-x-4 space-x-reverse">
                                 <div class="bg-secondary text-primary px-4 py-2 rounded-full text-sm font-semibold">
                                     15+ سنة خبرة
@@ -1194,7 +1194,7 @@
             observer.observe(section);
         });
     </script>
-    <script src="../assets/js/main.js"></script>
+    <script src="../../assets/js/main.js"></script>
 </body>
 </html>
 
