--- a/Blogs/furniture-moving-companies/index.html
+++ b/Blogs/furniture-moving-companies/index.html
@@ -6,8 +6,8 @@
     <title>دليل شامل لاختيار شركة نقل أثاث موثوقة في الكويت - أفضل شركات النقل المضمونة</title>
     <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
     <!-- Meta SEO الأساسية -->
-    <meta name="description" content="تعرف على دليل شامل لاختيار شركة نقل أثاث موثوقة في الكويت، مع قائمة بأفضل شركات النقل المضمونة التي تضمن لك سرعة وأمان وكفاءة في عملية النقل." />
-    <meta name="keywords" content="نقل أثاث الكويت, شركات نقل الأثاث في الكويت, شركات نقل موثوقة, نقل عفش الكويت, دليل نقل الأثاث, شركات نقل أثاث مضمونة" />
+    <meta name="description" content="اكتشف الدليل الشامل لاختيار أفضل شركة نقل أثاث في الكويت. احصل على نصائح ذهبية وقائمة بأفضل الشركات المضمونة لضمان نقل آمن وسريع لممتلكاتك الثمينة. اضغط هنا لتبدأ رحلتك نحو نقل أثاث خالٍ من المتاعب!" />
+    <meta name="keywords" content="نقل أثاث الكويت, شركات نقل الأثاث في الكويت, شركة نقل أثاث موثوقة, نقل عفش الكويت, دليل نقل الأثاث, شركات نقل أثاث مضمونة, أفضل شركة نقل أثاث بالكويت, أرخص شركة نقل أثاث بالكويت, نقل أثاث رخيص, نقل أثاث وعفش الكويت" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://gooldenmoon.com/blogs/furniture-moving-companies/">
 
@@ -669,7 +669,7 @@
                 <h2 class="section-title">مقدمة شاملة حول <span><a href="https://www.bashir-mover.com/" class="text-yellow-400 underline">نقل الاثاث</a></span></h1> في الكويت</h2>
                 
                 <p class="text-lg leading-relaxed mb-6">
-                    تُعتبر عملية <strong><a href="https://www.bashir-mover.com/" class="text-yellow-400 underline">   نقل الاثاث والعفش</a>  </strong> من أهم التحديات التي تواجه الأسر والشركات في دولة الكويت، حيث تتطلب هذه العملية خبرة متخصصة ودقة عالية لضمان سلامة الممتلكات والأثاث الثمين. في هذا الدليل الشامل، سنستعرض معًا كافة الجوانب المهمة لاختيار <strong> <a href="https://www.bashir-mover.com/" class="text-yellow-400 underline"> شركة نقل أثاث موثوقة في الكويت</a>     </strong>، بدءًا من المعايير الأساسية وصولاً إلى النصائح العملية التي ستساعدك في اتخاذ القرار الصحيح.
+                    هل تخطط للانتقال وتبحث عن <strong>شركة نقل أثاث موثوقة في الكويت</strong>؟ تُعد عملية <strong>نقل الأثاث والعفش</strong> من المهام التي تتطلب دقة وعناية فائقة لضمان سلامة ممتلكاتك الثمينة. في هذا الدليل الشامل، نقدم لك كل ما تحتاج معرفته لاختيار أفضل شركات نقل الأثاث في الكويت، بدءًا من المعايير الأساسية وصولاً إلى النصائح العملية التي ستضمن لك تجربة نقل سلسة وخالية من المتاعب.
                 </p>
 
                 <div class="highlight-text">
@@ -682,7 +682,7 @@
                 <h3 class="text-2xl font-semibold mt-8 mb-4" style="color: #590d3d;">أهمية قطاع نقل الأثاث في الاقتصاد الكويتي</h3>
                 
                 <p class="leading-relaxed mb-6">
-                    يُشكل قطاع <strong>نقل الأثاث والخدمات اللوجستية</strong> جزءًا مهمًا من الاقتصاد الكويتي، حيث يساهم في دعم النمو العمراني والتطور الحضاري الذي تشهده البلاد. هذا القطاع لا يقتصر دوره على النقل فحسب، بل يمتد ليشمل خدمات التخزين، التغليف، الفك والتركيب، مما يجعله صناعة متكاملة توفر فرص عمل لآلاف الأشخاص وتساهم في الناتج المحلي الإجمالي.
+                    يُشكل قطاع <strong>نقل الأثاث والخدمات اللوجستية</strong> جزءًا مهمًا من الاقتصاد الكويتي، حيث يساهم في دعم النمو العمراني والتطور الحضاري الذي تشهده البلاد. هذا القطاع لا يقتصر دوره على النقل فحسب، بل يمتد ليشمل خدمات التخزين، التغليف، الفك والتركيب، مما يجعله صناعة متكاملة توفر فرص عمل لآلاف الأشخاص وتساهم في الناتج المحلي الإجمالي. للمزيد من المعلومات حول الاقتصاد الكويتي، يمكنك زيارة <a href="https://www.cbk.gov.kw/" target="_blank" rel="noopener noreferrer">موقع بنك الكويت المركزي</a>.
                 </p>
 
                 <div class="important-note">
@@ -1510,6 +1510,6 @@
             });
         });
     </script>
-    <script src="../assets/js/main.js"></script>
+    <script src="../../assets/js/main.js"></script>
 </body>
 </html>
