--- a/Blogs/cleanliness-in-the-Gulf/index.html
+++ b/Blogs/cleanliness-in-the-Gulf/index.html
@@ -1802,6 +1802,6 @@
             }
         });
     </script>
-    <script src="../assets/js/main.js"></script>
+    <script src="../../assets/js/main.js"></script>
 </body>
 </html>
