--- a/Blogs/comprehensive-transportation-solutions/index.html
+++ b/Blogs/comprehensive-transportation-solutions/index.html
@@ -1225,6 +1225,6 @@
             }
         });
     </script>
-<script src="../assets/js/main.js"></script>
+<script src="../../assets/js/main.js"></script>
 </body>
 </html>
