--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <a href="tel:0565265233" class="w-full sm:w-auto" title="اتصل بنا الآن للحصول على أفضل الخدمات المنزلية في الخليج">
                         <button class="luxury-btn text-lg px-8 py-4 w-full sm:w-auto">
                             <i class="fas fa-phone ml-2"></i>
-                            اتصل بنا الآن
+                          خدمات الخليج 
                         </button>
                     </a>
                 </div>
