--- a/index.html
+++ b/index.html
@@ -445,6 +445,7 @@
                 <p class="text-xl text-yellow-600 opacity-80 max-w-3xl mx-auto font-elegant leading-relaxed">
                     اكتشف قصص نجاح مشاريعنا ونصائح الخبراء في عالم الخدمات المنزلية الفاخرة
                 </p>
+                <a href="./"></a>
             </div>
 
             <!-- Moving Services Section -->
@@ -1120,7 +1121,7 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
 
