--- a/blogs/furniture-arrangement/index.html
+++ b/blogs/furniture-arrangement/index.html
@@ -34,7 +34,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="../../assets/css/style.css">
     <link rel="stylesheet" href="./style.css">
    <style>
         @font-face {
