--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
         </div>
     </footer>
 
-    <script src="./assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
 
