--- a/index.html
+++ b/index.html
@@ -526,9 +526,9 @@
           <!-- شعار 2 -->
           <div class="mx-6 flex flex-col items-center group cursor-pointer mb-6 md:mb-0">
             <div class="w-24 h-24 bg-white rounded-xl shadow-lg flex items-center justify-center mb-4 group-hover:shadow-xl transition-all duration-300 group-hover:scale-110 border-2 border-transparent group-hover:border-[#e8c468]">
-              <img src="https://naqaa-clean.com/logo2.avif" alt="  نقاء كلين للنظافة" class="h-20 object-contain filter grayscale group-hover:grayscale-0 transition-all duration-300">
+              <img src="https://exzofor.com/moving-service-premium.avif" alt="    اكزو موف لنقل العفش " class="h-20 object-contain filter grayscale group-hover:grayscale-0 transition-all duration-300">
             </div>
-            <p class="text-sm font-bold text-[#590d3d] group-hover:text-[#e8c468] transition-colors duration-300">  نقاء كلين للنظافة</p>
+            <p class="text-sm font-bold text-[#590d3d] group-hover:text-[#e8c468] transition-colors duration-300">    اكزو موف لنقل العفش</p>
           </div>
           
           <!-- شعار 3 -->
