--- a/blogs/air-conditioner-maintenance/index.html
+++ b/blogs/air-conditioner-maintenance/index.html
@@ -56,7 +56,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../air-conditioner-maintenance/style.css">
+    <link rel="stylesheet" href="/blogs/air-conditioner-maintenance/style.css">
    
 </head>
 <body class="bg-gray-50">
