add url style.css

--- a/blogs/cleaning-companies/index.html
+++ b/blogs/cleaning-companies/index.html
@@ -27,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600;700;800&display=swap" rel="stylesheet">
    
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/blogs/cleaning-companies/style.css">
 
    <style>
           @font-face {
