--- a/blogs/cleaning-methods-and-services/index.html
+++ b/blogs/cleaning-methods-and-services/index.html
@@ -29,7 +29,7 @@
 
     <!-- Font Awesome Icons -->
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css" rel="stylesheet">
- <link rel="stylesheet" href="./style.css">
+ <link rel="stylesheet" href="/blogs/cleaning-methods-and-services/style.css">
    <style>
       @font-face {
             font-family: "Lama-sans";
