--- a/blogs/cleanliness-in-the-Gulf/index.html
+++ b/blogs/cleanliness-in-the-Gulf/index.html
@@ -28,9 +28,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/blogs/cleanliness-in-the-Gulf/style.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
 
     <style>
