--- a/blogs/comprehensive-transportation-solutions/index.html
+++ b/blogs/comprehensive-transportation-solutions/index.html
@@ -60,7 +60,7 @@
     
     <!-- Google Fonts - Arabic -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/blogs/comprehensive-transportation-solutions/style.css">
     
    <style>
      @font-face {
