--- a/blogs/furniture-arrangement/index.html
+++ b/blogs/furniture-arrangement/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../assets/css/style.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/blogs/furniture-arrangement/style.css">
    <style>
         @font-face {
             font-family: "Lama-sans";
