--- a/blogs/furniture-in-the-gulf/index.html
+++ b/blogs/furniture-in-the-gulf/index.html
@@ -25,7 +25,7 @@
     
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/blogs/furniture-in-the-gulf/style.css">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
