--- a/blogs/furniture-moving-companies/index.html
+++ b/blogs/furniture-moving-companies/index.html
@@ -32,7 +32,7 @@
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/blogs/furniture-moving-companies/style.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
     
     <style>
