--- a/blogs/furniture-moving-in-the-Gulf/index.html
+++ b/blogs/furniture-moving-in-the-Gulf/index.html
@@ -28,7 +28,7 @@
         <link rel="stylesheet" href="../../assets/css/style.css">
         <!-- Tailwind CSS footer -->
      <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-     <link rel="stylesheet" href="./style.css">
+     <link rel="stylesheet" href="/blogs/furniture-moving-in-the-Gulf/style.css">
 
    <style>
         body {
