add link article

--- a/blogs/furniture-in-the-gulf/index.html
+++ b/blogs/furniture-in-the-gulf/index.html
@@ -978,26 +978,19 @@
                     </div>
                 </div>
 
-                <div class=" text-black p-8 rounded-lg border-2">
-                    <h3 class="text-2xl font-semibold mb-4 text-secondary">نظرة على المستقبل</h3>
-                    <p class="text-lg mb-6 text-black">
-                        مستقبل صناعة نقل الأثاث في الخليج يبدو مشرقًا ومليئًا بالفرص. الشركات التي تتبنى التكنولوجيا، تركز على الاستدامة، وتقدم خدمات مخصصة وممتازة للعملاء ستكون هي الرائدة في هذا السوق المتطور باستمرار.
-                    </p>
-                    <div class="grid md:grid-cols-3 gap-4">
-                        <div class="bg-white bg-opacity-20 p-4 rounded text-center">
-                            <div class="text-2xl font-bold text-secondary mb-2">2030</div>
-                            <p class="text-sm">رؤية مستقبلية للصناعة</p>
-                        </div>
-                        <div class="bg-white bg-opacity-20 p-4 rounded text-center">
-                            <div class="text-2xl font-bold text-secondary mb-2">100%</div>
-                            <p class="text-sm">خدمات رقمية متكاملة</p>
-                        </div>
-                        <div class="bg-white bg-opacity-20 p-4 rounded text-center">
-                            <div class="text-2xl font-bold text-secondary mb-2">صفر</div>
-                            <p class="text-sm">انبعاثات كربونية</p>
-                        </div>
-                    </div>
-                </div>
+               <div class="text-black p-8 rounded-lg border-2">
+            <h3 class="text-2xl font-semibold mb-4 text-secondary">تعرف على خدمات نقل العفش في الرياض</h3>
+            <p class="text-lg mb-6 text-black">
+                إذا كنت تبحث عن شركة موثوقة لنقل الأثاث داخل مدينة الرياض، فإننا نرشح لك واحدة من أفضل الشركات التي تقدم خدمات شاملة تشمل الفك والتركيب، التغليف، والنقل الآمن. تعرف على التفاصيل الكاملة من خلال المقال التالي.
+            </p>
+            <div class="text-center mt-6">
+                <a href="https://www.mkaah.com/%D8%B4%D8%B1%D9%83%D8%A9-%D9%86%D9%82%D9%84-%D8%B9%D9%81%D8%B4-%D8%A8%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6/" 
+                class="inline-block bg-secondary text-white font-semibold py-2 px-6 rounded hover:bg-secondary-dark transition">
+                اقرأ المزيد عن خدمات نقل العفش بالرياض
+                </a>
+            </div>
+            </div>
+
             </div>
         </section>
 
