add link  article

--- a/blogs/cleaning-companies/index.html
+++ b/blogs/cleaning-companies/index.html
@@ -427,33 +427,45 @@
             </div>
 
             <div class="highlight-box">
-                <h4 class="text-2xl font-bold mb-6">
-                    <i class="fas fa-exclamation-triangle ml-2"></i>
-                    إحصائيات مهمة حول تأثير النظافة على الصحة العامة
-                </h4>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div>
-                        <ul class="list-custom text-black">
-                            <li>تقليل 50% من حالات نزلات البرد والإنفلونزا</li>
-                            <li>انخفاض 40% في العدوى المعوية بين الأطفال</li>
-                            <li>تحسن 60% في الصحة العامة للأطفال في البيئات النظيفة</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <ul class="list-custom text-black">
-                            <li>توفير 30% من تكاليف العلاج والرعاية الصحية</li>
-                            <li>زيادة 25% في الإنتاجية في بيئات العمل النظيفة</li>
-                            <li>تحسن 45% في جودة الحياة والرفاهية العامة</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="text-center mt-8">
-                    <p class="text-lg mb-4">
-                        <a href="https://naqaa-clean.com/" class="text-white underline font-bold">نقاء كلين</a> 
-                        تساهم بفعالية في تحقيق هذه الإحصائيات الإيجابية من خلال خدماتها المتميزة والاحترافية.
-                    </p>
-                </div>
-            </div>
+    <h4 class="text-2xl font-bold mb-6">
+        إحصائيات مهمة حول تأثير النظافة على الصحة العامة
+    </h4>
+    
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div>
+            <ul class="list-custom text-black">
+                <li>تقليل 50% من حالات نزلات البرد والإنفلونزا</li>
+                <li>انخفاض 40% في العدوى المعوية بين الأطفال</li>
+                <li>تحسن 60% في الصحة العامة للأطفال في البيئات النظيفة</li>
+            </ul>
+        </div>
+        <div>
+            <ul class="list-custom text-black">
+                <li>توفير 30% من تكاليف العلاج والرعاية الصحية</li>
+                <li>زيادة 25% في الإنتاجية في بيئات العمل النظيفة</li>
+                <li>تحسن 45% في جودة الحياة والرفاهية العامة</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="text-center mt-8">
+        <p class="text-lg mb-4">
+            <a href="https://naqaa-clean.com/" class="text-white underline font-bold">نقاء كلين</a>
+            تساهم بفعالية في تحقيق هذه الإحصائيات الإيجابية من خلال خدماتها المتميزة والاحترافية.
+        </p>
+    </div>
+
+    <div class="mt-10 text-center">
+        <p class="text-gray-800 mb-4">
+            من المهم الانتباه إلى أن نقص النظافة قد يؤثر على جهاز المناعة ويزيد من خطر الإصابة بمشكلات صحية أخرى، من بينها أعراض نقص فيتامين د، مثل التعب المستمر، آلام العضلات، وتساقط الشعر. لذلك فإن النظافة الجيدة والاهتمام بالتغذية يساهمان معًا في دعم الصحة العامة.
+        </p>
+        <a href="https://mawdoo3.com/%D8%A3%D8%B9%D8%B1%D8%A7%D8%B6_%D9%86%D9%82%D8%B5_%D9%81%D9%8A%D8%AA%D8%A7%D9%85%D9%8A%D9%86_%D8%AF" 
+           class="inline-block bg-blue-600 text-white font-semibold py-2 px-6 rounded hover:bg-blue-700 transition">
+            تعرف على أعراض نقص فيتامين د
+        </a>
+    </div>
+</div>
+
 
             <h3 class="text-2xl font-bold primary-color mt-8 mb-6">
                 <i class="fas fa-brain ml-2"></i>
