--- a/blogs/furniture-moving-in-the-Gulf/index.html
+++ b/blogs/furniture-moving-in-the-Gulf/index.html
@@ -229,9 +229,19 @@
 <p>تساهم خدمات نقل العفش الاحترافية في تحسين جودة حياة السكان من خلال تقليل الضغط والتوتر المرتبط بعمليات الانتقال. الخدمات المتخصصة مثل تلك التي تقدمها <a href="https://exzofor.com/" class="company-link">شركة Exo Move</a> تضمن انتقالاً سلساً وآمناً، مما يوفر الوقت والجهد للعملاء.</p>
 
 <div class="quote-box">
-    <p>"خدمات نقل العفش الاحترافية ليست مجرد نقل للأثاث، بل هي نقل للحياة والذكريات والأحلام من مكان إلى آخر"</p>
+    <p>
+        "خدمات نقل العفش الاحترافية لا تقتصر فقط على نقل الأثاث، بل تشمل أيضًا حماية الذكريات والاهتمام بأدق التفاصيل، خاصة في المدن الكبرى مثل الرياض، جدة، والدمام. في مدينة الرياض تحديدًا، هناك شركات متخصصة تقدم حلولاً متكاملة تضمن سلامة العفش من الباب إلى الباب."
+    </p>
     <cite>- خبير في صناعة النقل واللوجستيات</cite>
+
+    <div class="text-center mt-6">
+        <a href="https://www.mkaah.com/%D8%B4%D8%B1%D9%83%D8%A9-%D9%86%D9%82%D9%84-%D8%B9%D9%81%D8%B4-%D8%A8%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6/" 
+           class="inline-block mt-4 bg-blue-600 text-white font-semibold py-2 px-6 rounded hover:bg-blue-700 transition">
+            اكتشف خدمات نقل العفش في الرياض
+        </a>
+    </div>
 </div>
+
 
 <h3>دعم الحراك الاجتماعي</h3>
 
