--- a/blogs/cleanliness-in-the-Gulf/index.html
+++ b/blogs/cleanliness-in-the-Gulf/index.html
@@ -601,7 +601,7 @@
                 <h3>خدمات تنظيف السجاد والموكيت</h3>
                 <p>السجاد والموكيت من أكثر العناصر في المنزل والمكتب التي تحتاج لعناية خاصة، حيث أنها تجمع الأتربة والغبار ويمكن أن تأوي البكتيريا والعث. فريش كلين تقدم خدمات تنظيف السجاد المتخصصة باستخدام أحدث التقنيات.</p>
 
-                <div class="technology-showcase">
+                <div class="technology-showcase-2">
                     <h3><i class="fas fa-magic text-yellow-600 ml-2"></i>تقنيات تنظيف السجاد المتقدمة</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div>
@@ -766,7 +766,7 @@
                 <h3>تقنيات التنظيف بالبخار</h3>
                 <p>تُعتبر تقنية التنظيف بالبخار من أكثر التقنيات فعالية في مجال التنظيف العميق والتعقيم. هذه التقنية تستخدم البخار الساخن عالي الضغط للتنظيف والتطهير، مما يجعلها مثالية للبيئة الخليجية حيث الحاجة للتنظيف العميق والتعقيم المستمر.</p>
 
-                <div class="technology-showcase">
+                <div class="technology-showcase-3">
                     <h3><i class="fas fa-fire text-yellow-600 ml-2"></i>مزايا التنظيف بالبخار</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div>
@@ -1652,7 +1652,7 @@
     </div>
 
        <!-- Footer Section -->
-    <footer style="background-color: #590d3d;" class="footer-gradient relative overflow-hidden">
+    <footer style="background-color: #153052;" class="footer-gradient relative overflow-hidden">
         <div class="footer-particles" id="footerParticles"></div>
         
         <div class="container mx-auto px-4 py-12 relative z-10">
