change color in furniture-in-the-gulf

--- a/blogs/furniture-in-the-gulf/index.html
+++ b/blogs/furniture-in-the-gulf/index.html
@@ -33,7 +33,7 @@
             theme: {
                 extend: {
                     colors: {
-                        "primary": '#590d3d',
+                        "primary": '#153052',
                         "secondary": '#e8c468',
                         'primary-light': '#7a1450',
                         'primary-dark': '#3d0929',
@@ -200,7 +200,7 @@
                 </div>
                 
                 <div class="grid md:grid-cols-2 gap-8 mb-8">
-                    <div class="bg-gradient-to-br from-primary to-primary-dark text-white p-6 rounded-lg hover-scale">
+                    <div class="bg-[#153052] text-white p-6 rounded-lg hover-scale">
                         <div class="flex items-center mb-4">
                             <div class="w-12 h-12 bg-secondary rounded-full flex items-center justify-center ml-4">
                                 <svg class="w-6 h-6 text-primary" fill="currentColor" viewBox="0 0 20 20">
@@ -734,7 +734,7 @@
                         </div>
                     </div>
 
-                    <div class="bg-gradient-to-r from-secondary to-secondary-dark text-primary p-6 rounded-lg mt-8">
+                    <div class="bg-[#153052] text-white p-6 rounded-lg mt-8">
                         <h4 class="text-xl font-semibold mb-4">لماذا تختار بريمو موفرز؟</h4>
                         <p class="mb-4">
                             من خلال التركيز على رضا العملاء، الاستثمار في التدريب والتكنولوجيا، وتقديم حلول متكاملة، أصبحت بريمو موفرز رائدة في مجال نقل الأثاث في الرياض، ومثالاً يحتذى به في تقديم خدمات موثوقة واحترافية.
@@ -824,18 +824,18 @@
                             </div>
                         </div>
 
-                        <div class="bg-gradient-to-r from-secondary to-secondary-dark text-primary p-6 rounded-lg">
+                        <div class="bg-[#153052] text-white p-6 rounded-lg">
                             <h4 class="text-xl font-semibold mb-3">التأثير الاجتماعي الإيجابي</h4>
                             <div class="grid md:grid-cols-2 gap-6">
                                 <div>
                                     <h5 class="font-semibold mb-2">تسهيل حياة الأفراد:</h5>
-                                    <p class="text-sm text-primary-dark">
+                                    <p class="text-sm text-white">
                                         تقلل شركات نقل الأثاث من الضغط والتوتر المرتبط بعمليات الانتقال، مما يساهم في تحسين جودة حياة الأفراد والعائلات.
                                     </p>
                                 </div>
                                 <div>
                                     <h5 class="font-semibold mb-2">دعم الاستقرار السكاني:</h5>
-                                    <p class="text-sm text-primary-dark">
+                                    <p class="text-sm text-white">
                                         تساعد خدمات نقل الأثاث الفعالة في دعم الاستقرار السكاني وتسهيل التوزيع السكاني المتوازن.
                                     </p>
                                 </div>
@@ -1011,7 +1011,7 @@
     </main>
 
           <!-- Footer Section -->
-    <footer style="background-color: #590d3d;" class="footer-gradient relative overflow-hidden">
+    <footer style="background-color: #153052;" class="footer-gradient relative overflow-hidden">
         <div class="footer-particles" id="footerParticles"></div>
         
         <div class="container mx-auto px-4 py-12 relative z-10">
